compiler/testData/multiplatform/classScopes/functionIncorrectSignature/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignature/jvm.kt:2:5: error: actual function 'function' has no corresponding expected declaration
The following declaration is incompatible because return type is different:
    public final expect fun function(b: ByteArray): Int

    actual fun function(b: ByteArray): Long = b.size.toLong()
    ^
